outputs/tsp_constructive-constructive/mcts-ahd/2025-09-28_08-09-19/evaluations/problem_eval-6479311809042687725_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance score that combines immediate distance, future connectivity, and a novel 'node centrality' factor, which evaluates each node's potential to bridge gaps in the tour while penalizing nodes that create excessive detours. It also incorporates a 'tour momentum' parameter that adjusts selection based on recent moves to balance exploration and exploitation.}
                                                                                                                                                                                                                                                                              ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance score that combines immediate distance, future connectivity, and a novel 'node centrality' factor, which evaluates each node's potential to bridge gaps in the tour while penalizing nodes that create excessive detours. It also incorporates a 'tour momentum' parameter that adjusts selection based on recent moves to balance exploration and exploitation.}
                                                                                                                                                                                                                                                                              ^
SyntaxError: unterminated string literal (detected at line 1)
